Correção de bug na criação das tabelas

--- a/Notebook/FireData_Turnover_de_funcionários.ipynb
+++ b/Notebook/FireData_Turnover_de_funcionários.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "FireData - Turnover de funcionários.ipynb",
+      "name": "FireData_Turnover_de_funcionários.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -74,9 +74,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0cd49501-a343-47c6-b503-2003f73dc9be"
+        "outputId": "b08e6c4c-6c05-4f41-8c94-b4eebb8f064a"
       },
-      "execution_count": 70,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,12 +84,12 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: moment in /usr/local/lib/python3.7/dist-packages (0.12.1)\n",
-            "Requirement already satisfied: dateparser>=0.7 in /usr/local/lib/python3.7/dist-packages (from moment) (1.1.1)\n",
             "Requirement already satisfied: pytz>=2018.9 in /usr/local/lib/python3.7/dist-packages (from moment) (2022.2.1)\n",
             "Requirement already satisfied: times>=0.7 in /usr/local/lib/python3.7/dist-packages (from moment) (0.7)\n",
-            "Requirement already satisfied: tzlocal in /usr/local/lib/python3.7/dist-packages (from dateparser>=0.7->moment) (1.5.1)\n",
+            "Requirement already satisfied: dateparser>=0.7 in /usr/local/lib/python3.7/dist-packages (from moment) (1.1.1)\n",
             "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from dateparser>=0.7->moment) (2.8.2)\n",
             "Requirement already satisfied: regex!=2019.02.19,!=2021.8.27,<2022.3.15 in /usr/local/lib/python3.7/dist-packages (from dateparser>=0.7->moment) (2022.3.2)\n",
+            "Requirement already satisfied: tzlocal in /usr/local/lib/python3.7/dist-packages (from dateparser>=0.7->moment) (1.5.1)\n",
             "Requirement already satisfied: arrow in /usr/local/lib/python3.7/dist-packages (from times>=0.7->moment) (1.2.2)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from arrow->times>=0.7->moment) (4.1.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil->dateparser>=0.7->moment) (1.15.0)\n"
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "Pi4q5Auv4Irl"
       },
-      "execution_count": 71,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -178,9 +178,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bOYHHtWApRHm",
-        "outputId": "496aa51e-391d-427c-e67a-c58a9e864e5e"
+        "outputId": "c19dfcad-b8f5-427d-a164-e83be0445689"
       },
-      "execution_count": 72,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,9 +284,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "03b1ccea-8741-4cd2-fc6c-420e96355789"
+        "outputId": "3b0edf92-345a-424a-f3cf-c5f8d5aec208"
       },
-      "execution_count": 73,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,9 +408,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "89125aa5-03e3-4162-ce41-dfbbd99d75c6"
+        "outputId": "ae2c9d82-fb45-424a-8a90-71ea5996ce8d"
       },
-      "execution_count": 74,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,9 +498,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc4bbb3b-3b98-4488-c9ae-47cc7aabed05"
+        "outputId": "99c16fb3-c812-45d3-f9fb-add5350b3e87"
       },
-      "execution_count": 75,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
       "metadata": {
         "id": "rY1oHumuWkFA"
       },
-      "execution_count": 76,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -623,11 +623,11 @@
         "id": "284sBXUBY-nd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 487
         },
-        "outputId": "932bf2ce-249c-40e4-f8c2-912c7bda4b18"
+        "outputId": "45fca5ec-25e1-4e6e-d17b-026ee3915a17"
       },
-      "execution_count": 77,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -676,7 +676,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1a50a470-63e4-4154-ab87-a9be90dcac0b\">\n",
+              "  <div id=\"df-25e3c9dc-c21f-40ea-bd17-db71fef0aed8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -868,7 +868,7 @@
               "</table>\n",
               "<p>1694 rows × 11 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1a50a470-63e4-4154-ab87-a9be90dcac0b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25e3c9dc-c21f-40ea-bd17-db71fef0aed8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -919,12 +919,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1a50a470-63e4-4154-ab87-a9be90dcac0b button.colab-df-convert');\n",
+              "          document.querySelector('#df-25e3c9dc-c21f-40ea-bd17-db71fef0aed8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1a50a470-63e4-4154-ab87-a9be90dcac0b');\n",
+              "          const element = document.querySelector('#df-25e3c9dc-c21f-40ea-bd17-db71fef0aed8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -947,7 +947,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 26
         }
       ]
     },
@@ -1003,7 +1003,7 @@
       "metadata": {
         "id": "TWUHNkzTbf13"
       },
-      "execution_count": 78,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1040,35 +1040,35 @@
         "\n",
         "# Cria uma tabela nova com os dados formatados\n",
         "newData_reconhecimento = pd.DataFrame()\n",
-        "newData_reconhecimento = pd.concat([df_reconhecimento,one_hot_codinome], axis = 1)\n",
-        "newData_reconhecimento = pd.concat([df_reconhecimento,one_hot_situacao], axis = 1)\n",
-        "newData_reconhecimento = pd.concat([df_reconhecimento,one_hot_novocargo], axis = 1)\n",
-        "newData_reconhecimento = pd.concat([df_reconhecimento,one_hot_motivo], axis = 1)\n",
-        "newData_reconhecimento = pd.concat([df_reconhecimento,one_hot_funcao], axis = 1)\n",
+        "newData_reconhecimento = pd.concat([newData_reconhecimento,one_hot_codinome], axis = 1)\n",
+        "newData_reconhecimento = pd.concat([newData_reconhecimento,one_hot_situacao], axis = 1)\n",
+        "newData_reconhecimento = pd.concat([newData_reconhecimento,one_hot_novocargo], axis = 1)\n",
+        "newData_reconhecimento = pd.concat([newData_reconhecimento,one_hot_motivo], axis = 1)\n",
+        "newData_reconhecimento = pd.concat([newData_reconhecimento,one_hot_funcao], axis = 1)\n",
         "\n",
         "\n",
         "# ------------------------------------Tabela Reconhecimento--------------------------\n",
         "\n",
         "# Cria uma tabela nova com os dados formatados\n",
         "newData_ambiente = pd.DataFrame()\n",
-        "newData_ambiente = pd.concat([df_ambiente,one_hot_div], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,one_hot_pilar], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,punctuation], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,one_hot_factor], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,subpunctuation], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,one_hot_question], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,searchSkip], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,veryUnsatisfied], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,unsatisfied], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,neutral], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,satisfied], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,verySatisfied], axis = 1)\n",
-        "newData_ambiente = pd.concat([df_ambiente,one_hot_reliabilityRate], axis = 1)"
+        "newData_ambiente = pd.concat([newData_ambiente,one_hot_div], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,one_hot_pilar], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,punctuation], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,one_hot_factor], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,subpunctuation], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,one_hot_question], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,searchSkip], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,veryUnsatisfied], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,unsatisfied], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,neutral], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,satisfied], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,verySatisfied], axis = 1)\n",
+        "newData_ambiente = pd.concat([newData_ambiente,one_hot_reliabilityRate], axis = 1)"
       ],
       "metadata": {
         "id": "krPZwsqabFP5"
       },
-      "execution_count": 79,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1092,7 +1092,7 @@
       "metadata": {
         "id": "fwyZNOoHipW-"
       },
-      "execution_count": 80,
+      "execution_count": 29,
       "outputs": []
     }
   ]
